@@ -9,11 +9,16 @@
 * 11150: Use heuristic value for tiler max heap, retry with 50% more on failure
 * 11149: Capture tiling error messages Java incorrectly writes to stdout
 * 11139: Deal-to-Other key in Mask Trait now recognized in Search
+* 11135: Prompt to save/discard/cancel before loading the new game; fixed
+    Discord console drag-and-drop bug
 * 11127: Don't throw exception if there's a drive letter in a filename
+* 11124: Console supports up-arrow / down-arrow for command history
+* 11122: Console can show/set properties of selected pieces
 * 11121: Fix problem where undo wasn't allowed when starting a new game with
     logging turned on
 * 11120: Permit hyphens and periods in GamePieceImage names
 * 11119: Fixed NPE in NamedHotKeyConfigurer.setValue()
+* 11117: Log files can be fast-forwarded and appended to
 * 11115: Fix ClassCastException due to Zone properties not accounting for
     folders
 * 11109: LOS Range incorrect when thread is not snapped to hex centres
